add get list endpoint
