# api/swagger/swagger.json
@@ -17,6 +17,32 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
+        "/ping": {
+            "get": {
+                "description": "Проверяет доступность сервера и подключение к БД",
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "monitoring"
+                ],
+                "summary": "Проверка здоровья сервера",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user/login": {
             "post": {
                 "description": "Вход в систему с получением JWT токена",
